# shadertoy-cmake

./: CMakeLists.txt  import.cmake
app/: CMakeLists.txt
app/learnopengl/: camera.cpp  coordinate.cpp  framebuffer.cpp  model_load.cpp  texture.cpp  transform.cpp  triangle.cpp
app/shadertoy/: isovalues.cpp  simple.cpp
assets/shader/shadertoy/frag/: framebuffer.glsl  framebuffer_screen.glsl  isovalues.glsl  simple.glsl
assets/shader/shadertoy/vert/: framebuffer.glsl  framebuffer_screen.glsl  simple.glsl
cmake/: macro.cmake
include/glad/: glad.h
include/learnopengl/: shader_m.h  shader_s.h
src/: CMakeLists.txt
src/glad/: glad.c
test/: CMakeLists.txt
test/log/: clog_test.c  cpplog_test.cpp
test/misc/: include.cpp
